@@ -5,12 +5,16 @@ import GreenTextLangBase.GreenTextLangLexer;
 import GreenTextLangBase.GreenTextLangParser;
 // Remove other Value.* imports if listener doesn't directly create/use them for this task
 // For now, let's keep them as the original file had them.
+import GreenTextLangBase.GreenTextLangParserBaseVisitor;
+import Values.Value;
 import org.antlr.v4.runtime.*;
 import org.antlr.v4.runtime.tree.ParseTree;
 import org.antlr.v4.runtime.tree.ParseTreeWalker; // Added for listener
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -18,7 +22,7 @@ import java.util.Scanner;
 
 
 public class GreenTextLangInterpreter {
-    public static void run(Path filePath, boolean debug, boolean programMode) throws IOException {
+    public static void run(Path filePath, boolean debug, boolean programMode, PrintStream err, PrintStream out, InputStream in) throws IOException {
         String input = Files.readString(filePath);
         try{
             GreenTextLangLexer lexer = new GreenTextLangLexer(CharStreams.fromString(input));
@@ -37,25 +41,28 @@ public class GreenTextLangInterpreter {
             ParseTree tree = parser.program();
 
             // Using Listener instead of Visitor
-            GreenTextLangListenerImpl listener = new GreenTextLangListenerImpl(filePath, input);
+            GreenTextLangListenerImpl listener = new GreenTextLangListenerImpl(filePath, input, err);
             ParseTreeWalker walker = new ParseTreeWalker();
             walker.walk(listener, tree);
-            if (debug) {
-                System.out.println("Program parsed and listener processed successfully (if no exceptions).");
-            }
 
-            GreenTextLangVisitorImpl visitor = new GreenTextLangVisitorImpl(filePath);
+            GreenTextLangParserBaseVisitor<Value> visitor;
+            if (debug) {
+                out.println("Program parsed and listener processed successfully (if no exceptions).");
+                visitor = new GreenTextLangDebugVisitor(filePath, out, in);
+            } else {
+                visitor = new GreenTextLangVisitorImpl(filePath, out, in);
+            }
             visitor.visit(tree);
 
 
         } catch (SyntaxException e) {
-            System.err.println(e.getMessage());
+            err.println(e.getMessage());
         } catch (RedeclarationException e) { // Catch specific semantic error
-            System.err.println(e.getMessage());
+            err.println(e.getMessage());
         } catch (InterpreterException e) { // Catch other interpreter runtime errors
-            System.err.println(e.getMessage());
+            err.println(e.getMessage());
         } catch (Exception e) {
-            System.err.println("Unexpected error:");
+            err.println("Unexpected error:");
             e.printStackTrace();
         }
     }
@@ -75,21 +82,8 @@ public class GreenTextLangInterpreter {
         String presentation = "presentation.gtl";
         String presentation_cd = "presentation_cd.gtl";
         String functions = "functions.gtl";
-        if (args.length == 0) {
-            Path filePath = Path.of(System.getProperty("user.dir") + "/examples/" + functions); // Change to test redeclaration
-            run(filePath, true, false);
-        } else { // TODO windows always runs this main
-            Path inputPath = Paths.get(args[0]).toAbsolutePath();
-            File inputFile = inputPath.toFile();
-            if (!inputFile.exists() || !inputFile.isFile()) {
-                System.err.println("Error: File does not exist: " + inputPath);
-            } else {
-                GreenTextLangInterpreter.run(inputPath, false, false);
-            }
-            Scanner terminalInput = new Scanner(System.in);
-            System.out.print("Press enter to terminate.");
-            String input = terminalInput.nextLine();
-        }
+        Path filePath = Path.of(System.getProperty("user.dir") + "/examples/" + functions); // Change to test redeclaration
+        run(filePath, false, false, System.err, System.out, System.in);
     }
 }
 
